Fix: HTML content overflow

--- a/src/sass/main.scss
+++ b/src/sass/main.scss
@@ -52,7 +52,7 @@ a {
     left: 0;
     width: 100%;
     height: 100vh;
-    z-index: 50;
+    // z-index: 50;
     background-color: #cccccc;
 }
 #percent{
@@ -61,9 +61,9 @@ a {
     justify-content: center;
     font-family: "DM Sans", sans-serif;
     height: 100vh;
-    width: 100%;
     color: #aaaaaa;    
     font-size: 7em;
+    // font-weight: 700;
     font-weight: lighter;
     font-style: italic;
     mix-blend-mode: difference;
@@ -73,7 +73,7 @@ a {
     top: 0;
     left: 0;
     height: 100vh;
-    width: 100%;
+    max-width: 100%;
 }
 #barconfirm{
     width: 0%;
